# fitness-tracker

./: .gitignore  Cargo.toml  Gemfile  README.md  _config.yml  index.markdown  index.md
.github/workflows/: jekyll.yml
_posts/: 2025-05-06-welcome-to-jekyll.markdown
docs/: Gemfile  _config.yml
docs/_posts/: 2025-05-06-welcome-to-jekyll.markdown
src/: main.rs
static/: index.html
