[package]
name = "fitness-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
